--- a/pom.xml
+++ b/pom.xml
@@ -4,13 +4,11 @@
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
-  <groupId>zxingdemo</groupId>
-  <artifactId>zxingdemo</artifactId>
+  <groupId>hpaip</groupId>
+  <artifactId>gstqrcodeparser</artifactId>
   <version>1.0-SNAPSHOT</version>
 
-  <name>zxing-demo</name>
-  <!-- FIXME change it to the project's website -->
-  <url>http://www.example.com</url>
+  <name>gstqrcodeparser</name>
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -89,6 +87,7 @@
   </dependencies>
 
   <build>
+    <finalName>gstqrcodeparser</finalName>
     <pluginManagement><!-- lock down plugins versions to avoid using Maven defaults (may be moved to parent pom) -->
       <plugins>
         <!-- clean lifecycle, see https://maven.apache.org/ref/current/maven-core/lifecycles.html#clean_Lifecycle -->
@@ -138,7 +137,7 @@
         <configuration>
           <archive>
             <manifest>
-              <mainClass>zxingdemo.LambdaHandler</mainClass>
+              <mainClass>hpaip.LambdaHandler</mainClass>
             </manifest>
           </archive>
           <descriptorRefs>
